--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
 </head>
 
 <body class="gradient-background">
-  <div class="minha-foto">
-    <img src="imagem/foto-redonda.webp">
-  </div>
+  <div class="container-principal">
+    <div class="minha-foto">
+      <img src="imagem/foto-redonda.webp">
+    </div>
 
-  <div class="container-conteudo">
-    <h1>Me siga nas redes!</h1>
-  </div>
+    <div class="container-conteudo">
+      <h1>Me siga nas redes!</h1>
+    </div>
 
-  <div class="container-botoes">
-    <button>
-      <a href="https://www.linkedin.com/in/danielformoso/" target="_blank">LinkedIn</a>
-    </button>
-    <button>
-      <a href="https://github.com/Daniel-Formoso" target="_blank">GitHub</a>
-    </button>
-    <button>
-      <a href="https://meu-site-murex-chi.vercel.app/" target="_blank">Portfólio</a>
-    </button>
+    <div class="container-botoes">
+      <button>
+        <a href="https://www.linkedin.com/in/danielformoso/" target="_blank">LinkedIn</a>
+      </button>
+      <button>
+        <a href="https://github.com/Daniel-Formoso" target="_blank">GitHub</a>
+      </button>
+      <button>
+        <a href="https://meu-site-murex-chi.vercel.app/" target="_blank">Portfólio</a>
+      </button>
+    </div>
   </div>
 </body>
 
